Demo updated to CR2.